# airplane_sfml_game

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/Entities/: Big_stone.hpp  Bullet.hpp  Enemy.hpp  Entity.hpp  Player.cpp  Player.hpp  Scout.hpp  Small_stone.hpp  Unit.hpp  Warrior.hpp
src/Level/: Level_info.hpp  Progress_manager.cpp  Progress_manager.hpp
src/UI/: Button.cpp  Button.hpp  Decorated_panel.cpp  Decorated_panel.hpp  Label.cpp  Label.hpp  Panel.cpp  Panel.hpp
src/Window/: Leaderboard_entry.hpp  Main_window.cpp  Main_window.hpp
src/Window/Scenes/: Game_over_scene.cpp  Game_over_scene.hpp  Game_scene.cpp  Game_scene.hpp  Game_state.hpp  Leaderboard_scene.cpp  Leaderboard_scene.hpp  Level_selection.cpp  Level_selection.hpp  Login_scene.cpp  Login_scene.hpp  Main_menu.cpp  Main_menu.hpp  Scene.hpp  Victory_scene.cpp  Victory_scene.hpp
src/utils/: database_api.cpp  database_api.hpp  debug_bounds.hpp  defines.hpp  logger.cpp  logger.hpp
